# ScaffCC

./: README.md  scaffold.sh
Algorithms/Cat_State/: cat_state.n04.scaffold  cat_state.n05.scaffold
Algorithms/Ground_State_Estimation/: ground_state_estimation.h2.scaffold
Algorithms/QFT/: qft.n05.scaffold
Algorithms/Square_Root/: square_root.n4.scaffold
Algorithms/VQE/: UCCSD_ansatz_4.scaffold
scaffold/: Scaffold.makefile
vector-passes/: CMakeLists.txt  README
vector-passes/src/: CMakeLists.txt  Test.cpp
workflow/: README  count_gates.py  qalgos.py  util.py  workworkwork.py
